# analytical-platform-support-rota

./: .gitattributes  README.md  pyproject.toml
.git-crypt/keys/default/0/: 86F04FE0911220578C1378F847A094E24BDF7D93.gpg  FCB5F53FE4C74905F3A3C287032352B98D5DCEBD.gpg
analytical_platform_support_rota/: analytical_platform_support_rota_creds.json  generate_rota.py  settings.py  utils.py
data_engineering_support_rota/: data_engineering_support_rota_creds.json
docs/: config_report.json  days_worked_report.json
