[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = 'black'
import_heading_firstparty = 'First-party/Local'
import_heading_future = 'Future'
import_heading_stdlib = 'Standard library'
import_heading_thirdparty = 'Third-party'
line_length = 88
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'

[tool.poetry]
name = "analytical-platform-support-rota"
version = "0.1.0"
description = ""
authors = ["Tom Webber <thomas.webber@digital.justice.gov.uk>"]
readme = "README.md"
packages = [{include = "analytical_platform_support_rota"}]

[tool.poetry.dependencies]
python = ">=3.10.7"
google-api-python-client = "^2.72.0"
google-auth-oauthlib = "^0.8.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
